# ICCAD2020-Problem-C

./: .gitignore  .gitmodules  CMakeLists.txt  GPUSimulator.cu  GPUSimulator.py  GraphPreprocessing.py  Pipfile  README.md  U13034.vcd  extracted_out.vcd  out.saif  partition_m.result
.circleci/: config.yml
FileParsers/: __init__.py  parser_common.py  sdf.py  vlib_parser.py  vlib_reader.py
FileParsers/tests/: sdf_test.py  vlib_parser_test.py  vlib_reader_test.py
custom-tests/: ICCAD2020_ProblemC_saifdiff.py  saifdiff.py  test-custom-cases.py
custom-tests/test-cases/and/: ans.vcd  gv.gv  input.vcd  sdf.sdf
custom-tests/test-cases/and2_long/: ans.vcd  gv.gv  input.vcd  sdf.sdf
custom-tests/test-cases/and2_overflow/: ans.vcd  input.vcd
custom-tests/test-cases/and2_simple/: ans.vcd  gv.gv  input.vcd
custom-tests/test-cases/and2_vector_input/: ans.vcd  gv.gv  input.vcd  sdf.sdf
custom-tests/test-cases/and_or_wire_assign/: ans.vcd  gv.gv  input.vcd  sdf.sdf
custom-tests/test-cases/ao21/: ans.vcd  gv.gv  input.vcd  sdf.sdf
custom-tests/test-cases/nand_xor/: ans.vcd  gv.gv  sdf.sdf
custom-tests/test-cases/nand_xor_vector_output/: ans.vcd  gv.gv  input.vcd
custom-tests/test-cases/nor_assign_constant_input/: ans.vcd  gv.gv
custom-tests/test-cases/nor_constant_input/: ans.vcd  gv.gv  sdf.sdf
custom-tests/test-cases/nor_constant_io/: ans.vcd  gv.gv  input.vcd
custom-tests/test-cases/test/: ans.vcd  extracted_ans.vcd  extracted_input.vcd  gv.gv  input.vcd  sdf.sdf
custom-tests/test-cases/udp_mux2/: ans.vcd  gv.gv  input.vcd  sdf.sdf
gpu_simulator/: Pipfile  data_structures.py  module_registry.py  result_buffer.py  vcd_reader.py
gpu_simulator/tests/: test_builtin_gates.py
graph_preprocessing/: Pipfile  circuit_model.py  constants.py  graph.py  intermediate_file_writer.py  organize_standard_cells.py  utils.py
graph_preprocessing/FileParsers/: gv_parser.py  parser_common.py  sdf.py
graph_preprocessing/FileParsers/tests/: gv_test.py  vlib_parser_test.py
graph_preprocessing/circuit_model/: circuit_model.py
graph_preprocessing/file_parsers/: __init__.py  gv_parser.py  vlib_parser.py  vlib_reader.py
graph_preprocessing/file_parsers/tests/: gv_test.py  vlib_reader_test.py
graph_preprocessing/tests/: test_circuit_model.py  test_graph.py  test_utils.py
scripts/: VCDReader.py  build.sh  export_binaries.sh  extract_vcd.py  run_tests.sh  test.sh
src/: CMakeLists.txt  accumulators.cu  accumulators.h  constants.h  data_containers.cu  data_containers.h  graph.cu  graph.h  input_waveforms.cu  input_waveforms.h  simulation_result.cu  simulation_result.h  simulator.cu  simulator.h  utils.cu  utils.h  vcd_reader.cu  vcd_reader.h
src/circuit_model/: accumulators.h  cell.cu  cell.h  circuit.cu  circuit.h  wire.cu  wire.h  wire_wrappers.cu
src/file_readers/: intermediate_file_reader.cu  intermediate_file_reader.h  vcd_reader.cu  vcd_reader.h
src/include/: progress_bar.cu  progress_bar.h
src/simulator/: builtin_gates.cu  builtin_gates.h  collision_utils.cu  collision_utils.h  containers.cu  containers.h  data_structures.cu  data_structures.h  delay_utils.cu  device_functions.cu  device_functions.h  job.cu  job.h  memory_manager.cu  memory_manager.h  module_registry.cu  module_registry.h  simulator.cu  simulator.h  slicing_utils.cu
src/specs/: gv_cell.cu  gv_cell.h  sdf_cell.cu  sdf_cell.h  standard_cell.cu  standard_cell.h  timing_spec.h
tests/: CMakeLists.txt
tests/circuit_tests/: CMakeLists.txt  circuit_tests.cu
tests/gate_tests/: CMakeLists.txt  builtin_gate_tests.cu  collision_handling_tests.cu  delay_handling_tests.cu  gate_tests.cu  simulator_tests.cu  slicing_tests.cu  stepping_tests.cu
tests/simulation_result_tests/: CMakeLists.txt  bus_manager_tests.cu  util_tests.cu
